feat: integrate scheduling module

--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.4",
     "@nestjs/platform-express": "^11.0.3",
+    "@nestjs/schedule": "^5.0.0",
     "@nestjs/serve-static": "^5.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "express": "^5.0.1",
     "express-session": "^1.18.1",
     "fs-extra": "^11.3.0",
     "handlebars": "^4.7.8",
