chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -23,15 +23,15 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
-    "@nestjs/common": "^11.0.3",
+    "@nestjs/common": "^11.0.5",
     "@nestjs/config": "^4.0.0",
-    "@nestjs/core": "^11.0.3",
+    "@nestjs/core": "^11.0.5",
     "@nestjs/event-emitter": "^3.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.4",
-    "@nestjs/platform-express": "^11.0.3",
-    "@nestjs/schedule": "^5.0.0",
+    "@nestjs/platform-express": "^11.0.5",
+    "@nestjs/schedule": "^5.0.1",
     "@nestjs/serve-static": "^5.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^5.1.1",
@@ -45,7 +45,7 @@
     "meilisearch": "^0.48.2",
     "multer": "1.4.5-lts.1",
     "mysql2": "^3.12.0",
-    "nodemailer": "6.9.16",
+    "nodemailer": "6.10.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -59,16 +59,16 @@
     "@eslint/js": "^9.18.0",
     "@faker-js/faker": "^9.4.0",
     "@mapbox/node-pre-gyp": "^1.0.11",
-    "@nestjs/cli": "^11.0.0",
+    "@nestjs/cli": "^11.0.2",
     "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.3",
+    "@nestjs/testing": "^11.0.5",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.10.9",
     "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
