--- a/package.json
+++ b/package.json
@@ -23,17 +23,19 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
-    "@nestjs/common": "^11.0.5",
+    "@nestjs/common": "^11.0.8",
     "@nestjs/config": "^4.0.0",
-    "@nestjs/core": "^11.0.5",
+    "@nestjs/core": "^11.0.8",
     "@nestjs/event-emitter": "^3.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
-    "@nestjs/passport": "^11.0.4",
-    "@nestjs/platform-express": "^11.0.5",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.0.8",
+    "@nestjs/platform-socket.io": "^11.0.8",
     "@nestjs/schedule": "^5.0.1",
-    "@nestjs/serve-static": "^5.0.1",
+    "@nestjs/serve-static": "^5.0.2",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.0.8",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -49,34 +51,35 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.20",
     "typeorm-extension": "^3.6.3",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.6.1",
-    "@commitlint/config-conventional": "^19.6.0",
-    "@eslint/js": "^9.18.0",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
+    "@eslint/js": "^9.20.0",
     "@faker-js/faker": "^9.4.0",
     "@mapbox/node-pre-gyp": "^1.0.11",
     "@nestjs/cli": "^11.0.2",
     "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.5",
+    "@nestjs/testing": "^11.0.8",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.10.9",
+    "@types/node": "^22.13.1",
     "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.21.0",
-    "@typescript-eslint/parser": "^8.21.0",
-    "eslint": "^9.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
+    "eslint": "^9.20.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "globals": "^15.14.0",
@@ -89,7 +92,7 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript-eslint": "^8.21.0"
+    "typescript-eslint": "^8.23.0"
   },
   "jest": {
     "moduleFileExtensions": [
