--- a/package.json
+++ b/package.json
@@ -23,19 +23,19 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
-    "@nestjs/common": "^11.0.8",
-    "@nestjs/config": "^4.0.0",
-    "@nestjs/core": "^11.0.8",
-    "@nestjs/event-emitter": "^3.0.0",
+    "@nestjs/common": "^11.0.11",
+    "@nestjs/config": "^4.0.1",
+    "@nestjs/core": "^11.0.11",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.8",
-    "@nestjs/platform-socket.io": "^11.0.8",
+    "@nestjs/platform-express": "^11.0.11",
+    "@nestjs/platform-socket.io": "^11.0.11",
     "@nestjs/schedule": "^5.0.1",
-    "@nestjs/serve-static": "^5.0.2",
+    "@nestjs/serve-static": "^5.0.3",
     "@nestjs/typeorm": "^11.0.0",
-    "@nestjs/websockets": "^11.0.8",
+    "@nestjs/websockets": "^11.0.11",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -45,55 +45,55 @@
     "express-session": "^1.18.1",
     "fs-extra": "^11.3.0",
     "handlebars": "^4.7.8",
-    "meilisearch": "^0.48.2",
+    "meilisearch": "^0.49.0",
     "multer": "1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemailer": "6.10.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
+    "rxjs": "^7.8.2",
     "socket.io": "^4.8.1",
-    "typeorm": "^0.3.20",
-    "typeorm-extension": "^3.6.3",
-    "uuid": "^11.0.5"
+    "typeorm": "^0.3.21",
+    "typeorm-extension": "^3.7.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
-    "@eslint/js": "^9.20.0",
-    "@faker-js/faker": "^9.4.0",
-    "@mapbox/node-pre-gyp": "^1.0.11",
-    "@nestjs/cli": "^11.0.2",
-    "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.8",
+    "@eslint/js": "^9.21.0",
+    "@faker-js/faker": "^9.5.1",
+    "@mapbox/node-pre-gyp": "^2.0.0",
+    "@nestjs/cli": "^11.0.5",
+    "@nestjs/schematics": "^11.0.2",
+    "@nestjs/testing": "^11.0.11",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.9",
     "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.23.0",
-    "@typescript-eslint/parser": "^8.23.0",
-    "eslint": "^9.20.0",
-    "eslint-config-prettier": "^10.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
-    "globals": "^15.14.0",
+    "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "^29.2.6",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript-eslint": "^8.23.0"
+    "typescript-eslint": "^8.26.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -114,7 +114,8 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "@nestjs/core"
+      "@nestjs/core",
+      "bcrypt"
     ]
   }
 }
